<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="35dp"
    android:paddingEnd="22dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/auth"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="sans-serif"
        android:text="@string/auth1"
        android:textColor="@color/black"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="241dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/car_login" />

    <TextView
        android:id="@+id/textView4"
        style="@style/LabelAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/rounded_corners"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/textView5"
        style="@style/LabelAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/password"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/rounded_corners"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="forgotPassword"
        android:text="@string/fPass"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <Button
        android:id="@+id/bntRent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:onClick="login"
        android:padding="17dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Don’t have an account? "
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToSignUp"
            android:text="Register"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>