<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="22dp"
    android:paddingTop="35dp"
    android:paddingEnd="22dp"
    android:paddingBottom="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="41dp"
        android:background="@drawable/rounded_corners"
        android:onClick="back"
        app:srcCompat="@drawable/arrow" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/inter"
        android:text="@string/fPass"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/inter"
        android:text="Please input your email to recover your Tunisia Drive account"
        android:textColor="@color/black"
        android:textStyle="normal"
        />

    <TextView
        android:id="@+id/textView4"
        style="@style/LabelAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_corners"
        />


    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:onClick="handleForgotPassword"
        android:padding="17dp"
        android:text="@string/recoverAccount"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>