<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey2"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="15dp"
    android:paddingEnd="22dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"

            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/map" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/location1"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="goToProfil"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/img" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="Find your favourite vehicle"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tBrands"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="normal|bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ACNY"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="normal|bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</LinearLayout>